# django-ag-ui

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: release.yml  tests.yml
api/: index.html
code-mode/: index.html
concepts/: index.html
configuration/: index.html
django_ag_ui/: __init__.py  check_removed_settings.py  conf.py  constants.py  utils.py  version.py
django_ag_ui/agent/: agent_factory.py  agent_session.py  agui_server.py  agui_view.py  attachment_toolset.py  build_model.py  build_tool_catalog.py  clear_tool_results.py  guarded_stream.py  reasoning_filter.py  resolve_agent_factory.py  resolve_dotted_instances.py  run_transcript.py  sliding_window_compaction.py  system_prompt.py  tools_view.py  urls.py
django_ag_ui/agent/types/: agent_config.py  agent_factory_fn.py
django_ag_ui/config/: __init__.py  build_ag_ui_config.py
django_ag_ui/config/types/: __init__.py  ag_ui_config.py
django_ag_ui/contrib/store/: apps.py  default_attachment_store.py  default_conversation_store.py  default_step_store.py  models.py
django_ag_ui/contrib/store/migrations/: 0001_initial.py  0002_storedattachment.py  0003_storedrun_storedsnapshot_storedstepevent_and_more.py
django_ag_ui/contrib/transcription/: openai_transcription_backend.py
django_ag_ui/integrations/: build_spec_capability.py  build_spec_toolset.py  drf_mcp.py
django_ag_ui/persistence/: anonymous_operation_error.py  attachments_view.py  capped_upload_handler.py  django_session_conversation_store.py  model_attachment_store.py  model_conversation_store.py  null_attachment_store.py  null_conversation_store.py  null_transcription_backend.py  resolve_attachment_store.py  resolve_conversation_store.py  resolve_transcription_backend.py  scoped_conversation_store.py  threads_view.py  transcribe_view.py  utils.py
django_ag_ui/persistence/types/: attachment_ref.py  attachment_store.py  conversation.py  conversation_meta.py  conversation_store.py  opened_attachment.py  transcription_backend.py
django_ag_ui/policy/: auto_confirm.py
django_ag_ui/policy/audit/: audit_capability.py  logging_audit_logger.py  null_audit_logger.py  resolve_audit_logger.py
django_ag_ui/policy/audit/types/: audit_event.py  audit_logger.py
django_ag_ui/policy/guard/: tool_guard.py
django_ag_ui/policy/guard/types/: tool_guard_config.py
django_ag_ui/registry/: build_input_schema.py  decorator.py  tool_registry.py
django_ag_ui/registry/types/: tool_binding.py  tool_spec.py
django_ag_ui/skills/: load_skill_directories.py  skill_registry.py  skills_capability.py  skills_view.py
django_ag_ui/skills/types/: agent_skill.py  skill_spec.py
docs/: api.md  code-mode.md  concepts.md  configuration.md  index.md  installation.md  quickstart.md  step-persistence.md  subagents.md  tool-approval.md
installation/: index.html
quickstart/: index.html
search/: search_index.json
step-persistence/: index.html
subagents/: index.html
tests/: conftest_settings.py  test_ag_ui_event_contract.py  test_check_removed_settings.py  test_conf.py  test_constants.py  test_utils.py  test_version.py
tests/agent/: agui_server_urls.py  catalog_server.py  factories.py  test_agent_factory.py  test_agent_session.py  test_agui_server.py  test_agui_view.py  test_attachment_toolset.py  test_build_model.py  test_build_tool_catalog.py  test_compaction.py  test_guarded_stream.py  test_reasoning_filter.py  test_resolve_agent_factory.py  test_resolve_dotted_instances.py  test_run_transcript.py  test_system_prompt.py  test_tools_view.py  test_urls.py
tests/config/: test_build_ag_ui_config.py
tests/contrib/store/: test_default_attachment_store.py  test_default_conversation_store.py  test_default_step_store.py  test_models.py
tests/contrib/transcription/: test_openai_transcription_backend.py
tests/integrations/: drf_server.py  drf_server_typed.py  drf_specs.py  drf_specs_colliding.py  test_build_spec_capability.py  test_build_spec_toolset.py  test_code_mode.py  test_drf_mcp.py  test_subagents.py
tests/persistence/: test_attachments_view.py  test_capped_upload_handler.py  test_django_session_conversation_store.py  test_model_attachment_store.py  test_model_conversation_store.py  test_null_attachment_store.py  test_null_conversation_store.py  test_null_transcription_backend.py  test_resolve_attachment_store.py  test_resolve_conversation_store.py  test_resolve_transcription_backend.py  test_scoped_conversation_store.py  test_threads_view.py  test_transcribe_view.py  test_utils.py
tests/persistence/types/: test_attachment_ref.py  test_conversation_meta.py  test_opened_attachment.py
tests/policy/: test_auto_confirm.py
tests/policy/audit/: test_audit_capability.py  test_logging_audit_logger.py  test_null_audit_logger.py  test_resolve_audit_logger.py
tests/policy/audit/types/: test_audit_event.py
tests/policy/guard/: test_tool_guard.py
tests/registry/: test_build_input_schema.py  test_decorator.py  test_tool_registry.py
tests/registry/types/: test_tool_spec.py
tests/skills/: test_load_skill_directories.py  test_skill_registry.py  test_skills_capability.py  test_skills_view.py
tests/skills/types/: test_skill_spec.py
tool-approval/: index.html
