[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-ag-ui"
dynamic = ["version"]
description = "Django ↔ Pydantic-AI ↔ AG-UI integration: async view, tool registry, audit logger."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Artur Veres", email = "artur8118@gmail.com" },
]
keywords = ["django", "ag-ui", "pydantic-ai", "agent", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
    # Slim core + the AG-UI adapter only — avoids the full meta-package's
    # logfire / fastmcp / temporalio / otel stack. Pick a provider via the
    # extras below (or install the provider lib yourself).
    "pydantic-ai-slim[ag-ui]>=1.0,<2",
]

[project.optional-dependencies]
# Model-provider extras (slim ships none). Install one to use a "provider:model"
# MODEL string, e.g. `pip install django-ag-ui[anthropic]`.
anthropic = ["pydantic-ai-slim[anthropic]>=1.0,<2"]
openai = ["pydantic-ai-slim[openai]>=1.0,<2"]
google = ["pydantic-ai-slim[google]>=1.0,<2"]
# In-process bridge that exposes a drf-mcp-server tool registry as a
# Pydantic-AI toolset (the agent calls DRF tools without a network hop).
drf-mcp = ["djangorestframework-mcp-server>=0.9,<0.10"]
# Expose drf-services specs directly as agent tools via djangorestframework-
# pydantic-ai's SpecToolset — no MCP server in the path (DJANGO_AG_UI["SERVICE_SPECS"]).
spec-tools = ["djangorestframework-pydantic-ai>=0.1,<0.2"]

[project.urls]
Homepage = "https://github.com/Artui/django-ag-ui"
Repository = "https://github.com/Artui/django-ag-ui"
Issues = "https://github.com/Artui/django-ag-ui/issues"

[tool.hatch.version]
path = "django_ag_ui/version.py"
pattern = "^__version__(?:\\s*:\\s*[A-Za-z][A-Za-z0-9_]*)?\\s*=\\s*[\"'](?P<version>[^\"']+)[\"']"

[tool.hatch.build.targets.wheel]
packages = ["django_ag_ui"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.32",
    "pre-commit>=3.8.0",
    "pytest>=8.0",
    "pytest-django>=4.11.1",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "flake8-tidy-imports>=4.12.0",
    "django-stubs>=5.0",
    # The [drf-mcp] extra's backing package, so its bridge + tests run in dev.
    "djangorestframework-mcp-server>=0.9,<0.10",
    # The [spec-tools] extra's backing package, so its toolset + tests run in dev.
    "djangorestframework-pydantic-ai>=0.1,<0.2",
    # Provider libs so the API_KEY / PROVIDER model-building path is exercised
    # in dev/CI (the extras above ship to consumers, not the dev env).
    "pydantic-ai-slim[anthropic,openai,google]>=1.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.conftest_settings"
asyncio_mode = "auto"
addopts = "--cov=django_ag_ui --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["django_ag_ui"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "TID"]
ignore = ["E203", "E501", "E231", "F811", "E722", "E741"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["django_ag_ui"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.environment]
root = ["./django_ag_ui"]

# bump-my-version drives `make release-bump` — it rewrites the version in
# django_ag_ui/version.py and promotes the CHANGELOG [Unreleased] block
# under a new dated heading.
[tool.bumpversion]
current_version = "0.8.0"
allow_dirty = false
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "django_ag_ui/version.py"
search = '__version__: str = "{current_version}"'
replace = '__version__: str = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = """## [Unreleased]

## [{new_version}] — {now:%Y-%m-%d}"""

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "[Unreleased]: https://github.com/Artui/django-ag-ui/compare/v{current_version}...HEAD"
replace = """[Unreleased]: https://github.com/Artui/django-ag-ui/compare/v{new_version}...HEAD
[{new_version}]: https://github.com/Artui/django-ag-ui/compare/v{current_version}...v{new_version}"""
